kubernetes/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: portfolio-frontend
  labels:
    app: portfolio-frontend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: portfolio-frontend
  template:
    metadata:
      labels:
        app: portfolio-frontend
    spec:
      containers:
        - name: frontend
          image: cr.cloud.martinpetr.dev/portfolio-frontend:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 3000
          resources:
            requests:
              memory: "64Mi"
              cpu: "100m"
            limits:
              memory: "128Mi"
              cpu: "250m"
