kubernetes/service-backend.yaml
apiVersion: v1
kind: Service
metadata:
  name: portfolio-backend-svc
spec:
  selector:
    app: portfolio-backend
  ports:
    - name: http
      protocol: TCP
      port: 3001
      targetPort: 3001
    - name: ssh
      protocol: TCP
      port: 2222
      targetPort: 2222
  type: ClusterIP
