kubernetes/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: portfolio-frontend-svc
spec:
  selector:
    app: portfolio-frontend
  ports:
    - protocol: TCP
      port: 3000
      targetPort: 3000
  type: ClusterIP
