kubernetes/ingress-backend-ssh.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRouteTCP
metadata:
  name: portfolio-backend-ssh-ingress
spec:
  entryPoints:
    - ssh
  routes:
    - match: HostSNI(`*`)
      services:
        - name: portfolio-backend-svc
          port: 2222
