kubernetes/ingress-backend.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: portfolio-backend-ingress
spec:
  entryPoints:
    - websecure
  routes:
    - match: (Host(`martinpetr.dev`) || Host(`www.martinpetr.dev`)) && PathPrefix(`/api`)
      kind: Rule
      services:
        - name: portfolio-backend-svc
          port: 3001
  tls:
    certResolver: cloudflare
